crates/rulesteward-fapolicyd/tests/snapshots/fapd-E04__macro-in-pattern.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E04] sev=Error line=2 col=1 span=15..43 :: macro reference `%mymacro` not supported in `pattern=` (fapolicyd does not substitute macros here)
