crates/rulesteward-fapolicyd/tests/snapshots/fapd-E04__macro-in-trust-also-undefined.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[fapd-E03] sev=Error line=1 col=1 span=0..30 :: undefined macro reference `%undefined`
[fapd-E04] sev=Error line=1 col=1 span=0..30 :: macro reference `%undefined` not supported in `trust=` (fapolicyd does not substitute macros here)
