crates/rulesteward-fapolicyd/tests/snapshots/fapd-E04__macro-in-trust.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E04] sev=Error line=2 col=1 span=13..41 :: macro reference `%mymacro` not supported in `trust=` (fapolicyd does not substitute macros here)
